[package]
name = "circom-2-arithc"
version = "0.1.0"
edition = "2021"
resolver = "1" # Fixes lalrpop issue, see: https://github.com/lalrpop/lalrpop/issues/616

[dependencies]
clap = "2.34.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.3"
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] } 
thiserror = "1.0.59"

# DSL
circom-circom_algebra =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "circom_algebra"}
circom-code_producers =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "code_producers"}
circom-compiler =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "compiler"}
circom-constant_tracking =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "constant_tracking"}
circom-constraint_generation =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "constraint_generation"}
circom-constraint_list =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "constraint_list"}
circom-constraint_writers =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "constraint_writers"}
circom-dag =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "dag"}
circom-parser =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "parser"}
circom-program_structure =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "program_structure"}
circom-type_analysis =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "type_analysis"}
circom-virtual_fs =  { git = "https://github.com/voltrevo/circom", branch = "virtual-fs", package = "virtual_fs"}

# MPZ
mpz-circuits =  { git = "https://github.com/privacy-scaling-explorations/mpz", package = "mpz-circuits" }
bmr16-mpz = { git = "https://github.com/tkmct/mpz", package = "mpz-circuits" }
sim-circuit = { git = "https://github.com/brech1/sim-circuit" }

[[bin]]
name="circom"
path="./src/main.rs"
